Fix: use relative base path for API calls (works when mounted at any path)

--- a/src/dashboard-ui.html
+++ b/src/dashboard-ui.html
@@ -1106,7 +1106,7 @@
   let refreshInterval = null;
 
   // ---- API helpers ----
-  const BASE = window.location.origin;
+  const BASE = window.location.pathname.replace(/\/$/, '');
 
   async function api(path, opts) {
     try {
